# air-mvp

./: .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES_ROADMAP.txt  AIR_MVP_TASK_LIST.txt  GOOGLE_CLOUD_SETUP.md  README.md  check-clerk-config.js  clerk-test.html  clerk_ai_demo.py  docker-compose.yml  fix_gmail_client.py  generate_oauth_url.py  get-clerk-token.js  get-token-simple.js  setup-clerk-env.js  test_contact_summarization_api.py  test_oauth_new.py
backend/: CELERY_SETUP_SUMMARY.md  DATABASE_SCHEMA.md  GMAIL_INTEGRATION_GUIDE.md  README_AUTHENTICATION.md  alembic.ini  calendar_config.py  celerybeat-schedule  config.py  contact_deduplication_test_results.json  create_jwt_simple.py  create_simple_test_user.py  create_test_token.py  create_test_user.py  email_contact_filtering_test_results.json  main.py  pyproject.toml  requirements.txt  test_ai_assistant_caching.py  test_api_endpoints.py  test_calendar_integration.py  test_celery_setup.py  test_clerk_setup.py  test_contact_deduplication.py  test_contact_summarization.py  test_contact_summarization_api.py  test_contact_summarization_simple.py  test_conversation_threading.py  test_conversation_threading_api.py  test_conversation_threading_simple.py  test_email_contact_filtering.py  test_email_filtering_simple.py  test_gmail_integration.py  test_gmail_simple.py  test_integration_status_tracking.py  test_interaction_timeline_simple.py  test_job_monitoring.py  test_job_monitoring_simple.py  test_timeline_docker.py  test_timeline_simple.py  test_token_refresh_final.py  (+1 more)
backend/lib/: llm_client.py  oauth_client.py
(+79 files in other folders)
